--- a/scss/sections/_index.scss
+++ b/scss/sections/_index.scss
@@ -2,6 +2,7 @@
 // Layout Imports
 // ==========================================================================
 
-// @import 'portfolio';
-// @import 'skills';
-// @import 'contact';
+@import "header";
+@import "nav";
+@import "main";
+@import "footer";
