--- a/css/application.css
+++ b/css/application.css
@@ -8,8 +8,7 @@ body {
   font-size: 16px;
   line-height: 1.6;
   font-weight: 100;
-  color: #000;
-  background: url("../img/seigaiha.png") repeat; }
+  color: #000; }
 
 h1, h2, h3, h4, h5, h6 {
   margin-top: 0;
@@ -35,16 +34,7 @@ ul {
 
 img {
   max-width: 100%;
-  transition: box-shadow .5s ease-in-out; }
-
-#main-header {
-  padding: 1.5rem;
-  transition: padding .5s ease-out; }
-  @media (min-width: 460px) and (orientation: landscape) {
-    #main-header {
-      padding: 2rem; } }
-  #main-header .main-title {
-    text-align: center; }
+  transition: box-shadow .5s ease-in-out, width .5s ease-out, height .5s ease-out; }
 
 /****************************************
   Containers
@@ -54,6 +44,9 @@ img {
   margin: 0 auto;
   width: 90%;
   max-width: 700px; }
+
+.container:first-of-type {
+  margin-top: 0; }
 
 .container {
   margin-top: 20px; }
@@ -72,18 +65,62 @@ img {
   .md-col-1-3 {
     width: 31.73333%; } }
 
-hr {
-  border: 0;
-  height: 0;
-  border-top: 1px solid rgba(0, 0, 0, 0.1);
-  border-bottom: 1px solid rgba(255, 255, 255, 0.3); }
+body {
+  background: #abbaab;
+  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to left, #abbaab, #ffffff);
+  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to left, #abbaab, #ffffff);
+  /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */ }
 
 /* ---- ClearFix ---- */
+#main-header {
+  padding-top: 1.5rem;
+  transition: padding .5s ease-out; }
+  #main-header .main-title {
+    margin-bottom: 1rem; }
+  @media (min-width: 460px) and (orientation: landscape) {
+    #main-header {
+      padding-top: 2rem; } }
+  #main-header .main-title {
+    text-align: center; }
+
+#main-nav ul li {
+  display: inline-block; }
+  @media (min-width: 460px) and (orientation: landscape) {
+    #main-nav ul li {
+      margin-left: .8rem; } }
+#main-nav a {
+  padding: 1rem 2rem; }
+  #main-nav a.flickr-link {
+    background: rgba(21, 21, 23, 0.95);
+    color: #f2f2f2; }
+  #main-nav a.spotify-link {
+    background: #23cf5f;
+    color: #000;
+    font-weight: 700; }
+
+#main-nav li:last-of-type {
+  margin-left: -5px; }
+
+#main-content {
+  padding-top: 1rem;
+  padding-bottom: 2rem; }
+  #main-content.flickr-main {
+    background: rgba(21, 21, 23, 0.95); }
+  #main-content.spotify-main {
+    background: #23cf5f; }
+
 /* ---- Font Styles---- */
 .main-title {
+  color: #000;
   font-family: "Open Sans Condensed", Helvetica, Arial, sans-serif;
   font-weight: 300;
-  line-height: 1.2; }
+  line-height: 1.2;
+  transition: font-size .8s ease-out; }
+  @media (min-width: 460px) and (orientation: landscape) {
+    .main-title {
+      font-size: 3rem; } }
 
 .img-box {
   text-align: center;
