Updated Styles + lightbox custom styles

--- a/scss/layout/_extends.scss
+++ b/scss/layout/_extends.scss
@@ -11,12 +11,13 @@
 // Styles
 
 %primary-bg {
-
-
   background: #abbaab; /* fallback for old browsers */
   background: -webkit-linear-gradient(to left, #abbaab , #ffffff); /* Chrome 10-25, Safari 5.1-6 */
   background: linear-gradient(to left, #abbaab , #ffffff); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-          
+  background: linear-gradient(to left, rgba(128,128,128,1), rgba(63,173,168,.9)), url('../img/albums.jpg');
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
 
 }
 
