--- a/css/application.css
+++ b/css/application.css
@@ -65,13 +65,17 @@ img {
   .md-col-1-3 {
     width: 31.73333%; } }
 
-body {
+#main-header {
   background: #abbaab;
   /* fallback for old browsers */
   background: -webkit-linear-gradient(to left, #abbaab, #ffffff);
   /* Chrome 10-25, Safari 5.1-6 */
   background: linear-gradient(to left, #abbaab, #ffffff);
-  /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */ }
+  /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  background: linear-gradient(to left, gray, rgba(63, 173, 168, 0.9)), url("../img/albums.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center; }
 
 /* ---- ClearFix ---- */
 #main-header {
@@ -79,37 +83,51 @@ body {
   transition: padding .5s ease-out; }
   #main-header .main-title {
     margin-bottom: 1rem; }
+    @media (min-width: 460px) and (orientation: landscape) {
+      #main-header .main-title {
+        padding-bottom: 3rem; } }
   @media (min-width: 460px) and (orientation: landscape) {
     #main-header {
       padding-top: 2rem; } }
   #main-header .main-title {
     text-align: center; }
 
-#main-nav ul li {
-  display: inline-block; }
+#main-nav {
+  text-align: center; }
   @media (min-width: 460px) and (orientation: landscape) {
-    #main-nav ul li {
-      margin-left: .8rem; } }
-#main-nav a {
-  padding: 1rem 2rem; }
-  #main-nav a.flickr-link {
-    background: rgba(21, 21, 23, 0.95);
-    color: #f2f2f2; }
-  #main-nav a.spotify-link {
-    background: #23cf5f;
-    color: #000;
-    font-weight: 700; }
+    #main-nav {
+      text-align: left; } }
+  #main-nav ul li {
+    display: inline-block; }
+    @media (min-width: 460px) and (orientation: landscape) {
+      #main-nav ul li {
+        margin-left: .8rem; } }
+  #main-nav a {
+    padding: 1rem 2rem; }
+    #main-nav a.flickr-link {
+      background: rgba(21, 21, 23, 0.95);
+      color: #f2f2f2; }
+    #main-nav a.spotify-link {
+      background: #23cf5f;
+      color: #000;
+      font-weight: 700; }
 
 #main-nav li:last-of-type {
   margin-left: -5px; }
 
 #main-content {
   padding-top: 1rem;
-  padding-bottom: 2rem; }
+  padding-bottom: 2rem;
+  align-items: center;
+  justify-content: center;
+  height: 100%; }
   #main-content.flickr-main {
     background: rgba(21, 21, 23, 0.95); }
   #main-content.spotify-main {
     background: #23cf5f; }
+
+#contentRow {
+  justify-content: space-between; }
 
 /* ---- Font Styles---- */
 .main-title {
@@ -125,12 +143,15 @@ body {
 .img-box {
   text-align: center;
   margin-top: 10px; }
-  .img-box img {
-    width: 150px;
-    height: 150px; }
-    @media (min-width: 460px) and (orientation: landscape) {
-      .img-box img {
-        width: 200px;
-        height: 200px; } }
+  @media (min-width: 460px) and (orientation: landscape) {
+    .img-box img {
+      width: 200px;
+      height: 200px; } }
+
+.lb-dataContainer .lb-data > .lb-details {
+  font-family: "Open Sans Condensed", Helvetica, Arial, sans-serif;
+  font-size: 1.2rem; }
+.lb-dataContainer .lb-data .lb-caption {
+  font-size: 1.2rem; }
 
 /*# sourceMappingURL=application.css.map */
