--- a/scss/sections/_nav.scss
+++ b/scss/sections/_nav.scss
@@ -1,4 +1,9 @@
 #main-nav {
+  text-align: center;
+
+  @include col-md{
+      text-align: left;
+  }
 
   ul li {
     display: inline-block;
@@ -12,6 +17,10 @@
   a {
     padding: 1rem 2rem;
 
+    &:hover,
+    &:active {
+      // nothing yet..
+    }
     &.flickr-link {
       background: $color-bg-black;
       color: $color-text-light;
