--- a/css/application.css
+++ b/css/application.css
@@ -18,12 +18,6 @@ a {
   display: block;
   text-decoration: none; }
 
-a:hover img,
-a:active img,
-a:focus img {
-  opacity: 1;
-  box-shadow: 0px 0px 7px 3px rgba(119, 120, 125, 0.74); }
-
 :focus {
   outline: none; }
 
@@ -31,10 +25,6 @@ ul {
   margin: 0;
   padding: 0;
   list-style: none; }
-
-img {
-  max-width: 100%;
-  transition: box-shadow .5s ease-in-out, width .5s ease-out, height .5s ease-out; }
 
 /****************************************
   Containers
@@ -82,7 +72,9 @@ img {
   padding-top: 1.5rem;
   transition: padding .5s ease-out; }
   #main-header .main-title {
-    margin-bottom: 1rem; }
+    margin-bottom: 1rem;
+    color: #E9E4E4;
+    text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.75); }
     @media (min-width: 460px) and (orientation: landscape) {
       #main-header .main-title {
         padding-bottom: 3rem; } }
@@ -103,9 +95,11 @@ img {
       #main-nav ul li {
         margin-left: .8rem; } }
   #main-nav a {
-    padding: 1rem 2rem; }
+    padding: 1rem 2rem;
+    border-top-left-radius: 9px;
+    border-top-right-radius: 9px; }
     #main-nav a.flickr-link {
-      background: rgba(21, 21, 23, 0.95);
+      background: rgba(21, 21, 23, 0.91);
       color: #f2f2f2; }
     #main-nav a.spotify-link {
       background: #23cf5f;
@@ -147,6 +141,16 @@ img {
     .img-box img {
       width: 200px;
       height: 200px; } }
+
+img {
+  max-width: 100%;
+  transition: box-shadow .6s ease-in-out, width .5s ease-out, height .5s ease-out, transform .5s ease-in-out; }
+
+a:hover img,
+a:active img,
+a:focus img {
+  transform: scale(1.02);
+  box-shadow: 0px 0px 4px 2px rgba(15, 15, 16, 0.95); }
 
 .lb-dataContainer .lb-data > .lb-details {
   font-family: "Open Sans Condensed", Helvetica, Arial, sans-serif;
