--- a/scss/base/_variables.scss
+++ b/scss/base/_variables.scss
@@ -1,6 +1,7 @@
 // Descriptive color variables
 
 $white            : #fafafa;
+$light-white      : #E9E4E4;
 $black            : #000;
 $grey             : lightgrey;
 $concrete         : #f2f2f2;
@@ -26,10 +27,7 @@ $color-bg-light     : $white;
 $color-bg-black     : $flickr-black;
 $color-bg-green     : $spotify-green;
 
-$color-html-skill   : $boston-blue;
-$color-css-skill    : $jelly-bean;
-$color-js-skill     : $blush;
-$color-design-skill : $gamboge;
+$color-main-title   : $light-white;
 
 // Font Stacks
 
