--- a/scss/components/_images.scss
+++ b/scss/components/_images.scss
@@ -10,3 +10,18 @@
   }
 
   }
+
+  img {
+      max-width: 100%;
+      transition: box-shadow .6s ease-in-out,
+                  width .5s ease-out,
+                  height .5s ease-out,
+                  transform .5s ease-in-out;
+  }
+
+  a:hover img,
+  a:active img,
+  a:focus img {
+    transform: scale(1.02);
+    box-shadow: 0px 0px 4px 2px darken($color-bg-black, 2.5%);
+  }
