--- a/scss/base/_variables.scss
+++ b/scss/base/_variables.scss
@@ -29,6 +29,8 @@ $color-bg-green     : $spotify-green;
 
 $color-main-title   : $light-white;
 
+$btn-text-color     : $flickr-black;
+
 // Font Stacks
 
 $stack-sans-serif     : Helvetica, Arial, sans-serif;
