--- a/scss/components/_lightbox-custom.scss
+++ b/scss/components/_lightbox-custom.scss
@@ -1,3 +1,7 @@
+/********************************
+  Lightbox2 Style Overrides
+********************************/
+
 .lb-dataContainer{
   & .lb-data > .lb-details {
     font-family: $stack-open-sans;
