--- a/scss/layout/_extends.scss
+++ b/scss/layout/_extends.scss
@@ -21,6 +21,15 @@
 
 }
 
+//  Buttons
+%btn {
+  color: $btn-text-color;
+  background: #23cf5f;
+  border: none;
+  border-radius: 15px;
+  padding: 6px 18px;
+}
+
 
 // Container Padding
 
