--- a/scss/sections/_header.scss
+++ b/scss/sections/_header.scss
@@ -1,3 +1,6 @@
+/********************************
+  #main-header Title Area
+********************************/
 #main-header {
   @extend %primary-bg;
   padding-top: 1.5rem;
