--- a/scss/sections/_nav.scss
+++ b/scss/sections/_nav.scss
@@ -1,3 +1,7 @@
+/********************************
+  #main-nav API Link tabs
+********************************/
+
 #main-nav {
   text-align: center;
 
@@ -11,9 +15,7 @@
       margin-left: .8rem;
 
     }
-
   }
-
   a {
     padding: 1rem 2rem;
     border-top-left-radius: 9px;
@@ -34,7 +36,6 @@
     font-weight: 700;
     }
   }
-
 }
 
 #main-nav li:last-of-type {
