--- a/scss/sections/_main.scss
+++ b/scss/sections/_main.scss
@@ -1,18 +1,79 @@
+/********************************
+  #main-content Gallery Area
+********************************/
 #main-content {
-  padding-top: 1rem;
-  padding-bottom: 2rem;
-  align-items: center;
-  justify-content: center;
-  height: 100%;
-  &.flickr-main {
-    background: $color-bg-black;
-  }
-  &.spotify-main {
-    background: $color-bg-green;
-  }
+    padding-top: 1rem;
+    padding-bottom: 2rem;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+
+    &.flickr-main {
+        background: $color-bg-black;
+    }
+
+    &.spotify-main {
+        background: $color-bg-green;
+    }
 }
 
-
 #contentRow {
-  justify-content: space-between;
+    justify-content: space-between;
+}
+/********************
+  Search and filter
+********************/
+.search-filter-row {
+    flex-direction: row;
+    justify-content: space-around;
+    @include col-md{
+        padding-top: 1rem;
+        padding-bottom: 1rem;
+        border-bottom: 1px solid #3A3A3D;
+    }
+
+    .search-container {
+        width: 100%;
+        margin-bottom: 1rem;
+        @include col-md {
+            width: auto;
+            margin-bottom: 0;
+            margin-right: auto;
+            // display: flex;
+            // flex-direction: row;
+        };
+
+        input[type="search"] {
+            border-radius: 12px;
+            border: none;
+            color: rgba(32, 32, 34, .84);
+            padding: 6px 12px;
+        }
+
+        button[type="submit"] {
+            @extend %btn;
+            float: right;
+            @include col-md {
+                float: none;
+            }
+        }
+    }
+
+    .btn-filter {
+        @extend %btn;
+        border-radius: 5px;
+        width: 48%;
+        @include col-md {
+            width: initial;
+        };
+    }
+
+    #sortDate {
+        float: left;
+        margin-right: 8px;
+    }
+
+    #filter {
+        float: right;
+    }
 }
