--- a/scss/layout/_extends.scss
+++ b/scss/layout/_extends.scss
@@ -1,81 +1,97 @@
 // Text Extends
 
 %centered {
-  text-align: center;
+    text-align: center;
 }
 
 %text-upper {
-  text-transform: uppercase;
+    text-transform: uppercase;
 }
-
 // Styles
-
 %primary-bg {
-  background: #abbaab; /* fallback for old browsers */
-  background: -webkit-linear-gradient(to left, #abbaab , #ffffff); /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(to left, #abbaab , #ffffff); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-  background: linear-gradient(to left, rgba(128,128,128,1), rgba(63,173,168,.9)), url('../img/albums.jpg');
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center;
-
+    background: #abbaab;
+    /* fallback for old browsers */
+    background: -webkit-linear-gradient(to left, #abbaab , #ffffff);
+    /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to left, #abbaab , #ffffff);
+    /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    background: linear-gradient(to left, rgba(128,128,128,1), rgba(63,173,168,.9)), url('../img/albums.jpg');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
 }
+
+//  logo before
+  %logo-text {
+    font-weight: 700;
+    margin-left: 24px;
+    position: relative;
+    @include col-md{
+        margin-left: 40px;
+    }
+  }
+
+  %before-logo {
+    display: inline-block;
+    position: absolute;
+    width: 25px;
+    height: 25px;
+    left: -25px;
+    width: 25px;
+    top:  -2px;
+      @include col-md {
+        width: 35px;
+        height: 35px;
+        left: -35px;
+        top: -4px;
+      }
+  }
 
 //  Buttons
 %btn {
-  color: $btn-text-color;
-  background: #23cf5f;
-  border: none;
-  border-radius: 15px;
-  padding: 6px 18px;
+    color: rgba(21, 21, 23, 0.95);
+    background: rgba(230, 230, 219, 0.38);
+    border: 2px solid black;
+    border-radius: 15px;
+    padding: 10px 18px;
 }
-
-
 // Container Padding
-
 %container-padding {
-  padding: 2.5em 0 2.5em;
+    padding: 2.5em 0;
 }
-
 // Margin Extends
-
 %margin-0-center {
-  margin: 0 auto;
+    margin: 0 auto;
 }
-
 // Float
-
 %float-left {
-  float:left;
+    float: left;
 }
 
 %float-right {
-  float: right;
+    float: right;
 }
-
 // Selected State
-
 %selected {
-  background: $black;
-  color: $white;
+    background: $black;
+    color: $white;
 }
 
 %hr-style {
-  border: 0;
-  height: 0;
-  border-top: 1px solid rgba(0, 0, 0, 0.1);
-  border-bottom: 1px solid rgba(255, 255, 255, 0.3);
+    border: 0;
+    height: 0;
+    border-top: 1px solid rgba(0, 0, 0, 0.1);
+    border-bottom: 1px solid rgba(255, 255, 255, 0.3);
 }
-
-
 /* ---- ClearFix ---- */
-
 %clearfix {
-  &:before, &:after {
-      content: " ";
-      display: table;
-  }
-  &:after {
-      clear: both;
-  }
+    &:after,
+    &:before {
+        content: " ";
+        display: table;
+    }
+
+    &:after {
+        clear: both;
+    }
 }
