--- a/scss/sections/_nav.scss
+++ b/scss/sections/_nav.scss
@@ -11,11 +11,9 @@
 
   ul li {
     display: inline-block;
-    @include col-md {
-      margin-left: .8rem;
-
-    }
+    width: 50%;
   }
+
   a {
     padding: 1rem 2rem;
     border-top-left-radius: 9px;
