--- a/scss/sections/_nav.scss
+++ b/scss/sections/_nav.scss
@@ -21,7 +21,7 @@
 
     &:hover,
     &:active {
-      // nothing yet..
+      /* nothing yet..*/
     }
     &.flickr-link {
       background: rgba($color-bg-black, .91);
