--- a/scss/layout/_extends.scss
+++ b/scss/layout/_extends.scss
@@ -1,4 +1,4 @@
-// Text Extends
+/* Text Extends*/
 
 %centered {
     text-align: center;
@@ -7,21 +7,23 @@
 %text-upper {
     text-transform: uppercase;
 }
-// Styles
+/* Styles*/
 %primary-bg {
     background: #abbaab;
     /* fallback for old browsers */
     background: -webkit-linear-gradient(to left, #abbaab , #ffffff);
     /* Chrome 10-25, Safari 5.1-6 */
+    background: -webkit-linear-gradient(right, #abbaab , #ffffff);
     background: linear-gradient(to left, #abbaab , #ffffff);
     /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    background: -webkit-linear-gradient(right, rgba(128,128,128,1), rgba(63,173,168,.9)), url('../img/albums.jpg');
     background: linear-gradient(to left, rgba(128,128,128,1), rgba(63,173,168,.9)), url('../img/albums.jpg');
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
 }
 
-//  logo before
+/*  logo before*/
   %logo-text {
     font-weight: 700;
     margin-left: 24px;
@@ -47,7 +49,7 @@
       }
   }
 
-//  Buttons
+/*  Buttons*/
 %btn {
     color: rgba(21, 21, 23, 0.95);
     background: rgba(230, 230, 219, 0.38);
@@ -55,15 +57,15 @@
     border-radius: 15px;
     padding: 10px 18px;
 }
-// Container Padding
+/* Container Padding*/
 %container-padding {
     padding: 2.5em 0;
 }
-// Margin Extends
+/* Margin Extends*/
 %margin-0-center {
     margin: 0 auto;
 }
-// Float
+/* Float*/
 %float-left {
     float: left;
 }
@@ -71,7 +73,7 @@
 %float-right {
     float: right;
 }
-// Selected State
+/* Selected State*/
 %selected {
     background: $black;
     color: $white;
