--- a/scss/layout/_containers.scss
+++ b/scss/layout/_containers.scss
@@ -9,6 +9,16 @@
   margin: $margin-center;
   width: 90%;
   max-width: 700px;
+
+  &.flickr-inner {
+      background: $color-bg-black;
+      padding: 1rem;
+  }
+
+  &.spotify-inner {
+      background: $color-bg-green;
+      padding: 1rem;
+  }
 }
 
 .container:first-of-type {
