--- a/scss/sections/_main.scss
+++ b/scss/sections/_main.scss
@@ -2,22 +2,18 @@
   #main-content Gallery Area
 ********************************/
 #main-content {
-    padding-top: 1rem;
-    padding-bottom: 2rem;
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
     -webkit-box-pack: center;
         -ms-flex-pack: center;
             justify-content: center;
-
-    &.flickr-main {
-        background: $color-bg-black;
-    }
-
-    &.spotify-main {
-        background: $color-bg-green;
-    }
+            &.flickr-main {
+              background: #252525;
+            }
+            &.spotify-main {
+              background: #2ce46c;
+            }
 }
 
 #contentRow {
