CSS restyled and JS fade animations tweaked

--- a/css/application.css
+++ b/css/application.css
@@ -208,6 +208,9 @@ ul {
   -ms-flex-pack: justify;
   justify-content: space-between; }
 
+.text-hidden {
+  text-indent: -9999px; }
+
 /********************
   Search and filter
 ********************/
