--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -4,6 +4,13 @@ BASE STYLES
 
 *, *:after, *:before {
     box-sizing: border-box;
+    border: 1px solid red;
+}
+
+html,
+body {
+  margin-bottom: 0;
+  padding-bottom: 0;
 }
 
 
