--- a/scss/sections/_main.scss
+++ b/scss/sections/_main.scss
@@ -8,6 +8,7 @@
     -webkit-box-pack: center;
         -ms-flex-pack: center;
             justify-content: center;
+            margin-top: -2px;
             &.flickr-main {
               background: #252525;
             }
