Remove * border style

--- a/css/application.css
+++ b/css/application.css
@@ -3,7 +3,7 @@ BASE STYLES
 /***************************************/
 *, *:after, *:before {
   box-sizing: border-box;
-  border: 1px solid red; }
+}
 
 html,
 body {
